--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -7,6 +7,15 @@
 </head>
 <body>
 <script>
+const pressed = [];
+const secretCode = 'oleg';
+window.addEventListener('keyup', (e) => {
+	pressed.push(e.key);
+	pressed.splice(-secretCode.length - 1, pressed.length - secretCode.length);
+	if (pressed.join('') == secretCode) {
+		cornify_add();
+	}
+})
 </script>
 </body>
 </html>
